<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.ActivityRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/exitRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginNormal"
            android:src="@drawable/mark_cancel"
            android:contentDescription="@string/quit"
            android:fitsSystemWindows="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginSmall"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textSize="@dimen/textHuge"
            android:textColor="@color/colorTextNormal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerWelcome"
            android:textSize="@dimen/textNormal"
            android:textColor="@color/colorTextLight"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginTop="@dimen/marginHuge"
            android:layout_marginEnd="@dimen/marginBig"
            android:hint="@string/accountHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerAccountEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textNormal"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="11"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:hint="@string/passwordHint"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textNormal"
                android:singleLine="true"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:hint="@string/passwordConfirmHint"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordConfirmEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textNormal"
                android:singleLine="true"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginEnd="@dimen/marginBig"
            android:hint="@string/nameHint" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textNormal"
                android:singleLine="true"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginBig"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/registerChooseDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorHint" />

            <RadioButton
                android:id="@+id/registerChoosePatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginSmall"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientHint"/>

            <EditText
                android:id="@+id/bondDoctorEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/marginBig"
                android:paddingStart="@dimen/paddingNormal"
                android:paddingEnd="@dimen/paddingNormal"
                android:textSize="@dimen/textSystem"
                android:background="@drawable/selector_edit"
                android:autofillHints=""
                android:inputType="text"
                android:enabled="false"/>

        </RadioGroup>

        <Button
            android:id="@+id/entranceRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginTop="@dimen/marginHuge"
            android:layout_marginEnd="@dimen/marginBig"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textNormal"
            android:textStyle="bold"
            android:background="@drawable/selector_button"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginBig"
            android:layout_marginTop="@dimen/marginTiny"
            android:layout_marginEnd="@dimen/marginBig"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/registerProtocolCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginProtocolHint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userUsageProtocol"
                android:textColor="@color/colorTheme"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>