<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSmall"
        android:layout_marginEnd="@dimen/marginSmall"
        android:layout_marginBottom="@dimen/marginSmall"
        app:cardCornerRadius="@dimen/cardRadius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/patientCardHeadSculpture"
                android:layout_width="@dimen/iconNormal"
                android:layout_height="@dimen/iconNormal"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginBottom="@dimen/marginSmall"
                android:src="@drawable/picture_male"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/accountHeadSculpture" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/patientCardHeadSculpture"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/patientCardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patientName"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="@dimen/textNormal" />

                <TextView
                    android:id="@+id/patientCardDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTiny"
                    android:text="@string/patientDetail"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/textSystem" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/patientCardStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/marginTiny"
                    android:text="@string/dataStatusFail"
                    android:textColor="@color/colorTextNormal"
                    android:textSize="@dimen/textNormal" />

                <ImageView
                    android:id="@+id/patientCardStatusImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:src="@drawable/state_unknown"
                    android:contentDescription="@string/status" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>